--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Kat <ebisu1922@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "ava": "^0.24.0"
+    "ava": "^0.24.0",
+    "d3": "^4.12.0"
   }
 }
